updated src of images

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="header">ADVICE #0</div>
     <h1 class="advice"><q class="actual-advice">If something makes you happy do it, don't care what other think.</q></h1>
     <div class="line">
-      <img src="images/pattern-divider-desktop.svg" alt="">
+      <img src="pattern-divider-desktop.svg" alt="">
     </div>
     <div class="cube">
-      <img src="images/icon-dice.svg" alt="" width="50%" height="50%">
+      <img src="icon-dice.svg" alt="" width="50%" height="50%">
     </div>
   </div>
   <div class="doneby">Coded by Shriram</div>
